--- a/assets/styles.css
+++ b/assets/styles.css
@@ -17,7 +17,7 @@
 
 @keyframes enhance-header {
     to {
-        background: rgba(243, 227, 250, .4);
+        background: rgba(235, 204, 247, 0.4);
         backdrop-filter: blur(5px);
     }
 }
